Downgrading to Java 17, BSDs do not support 21 yet:(